# CVDP

./: CVDP_output.ipynb  README.md  end_to_end_example.ipynb  example_config.yaml  pyproject.toml  reference_data.yaml  run_cvdp.py  simulation_data.yaml  variable_defaults.yaml
cvdp/: __init__.py  cli.py  cvdp.py  cvpd.py  definitions.py  diag.py  file_io.py  io.py  run_cvdp.py  utils.py  variable_defaults.yaml  vis.py  visualize.py
cvdp/colormaps/: ncl_default.csv
cvdp/computation/: climatology.py  interp_funcs.py
cvdp/diag/: AtmOcnMean.py  __init__.py  time_series.py
cvdp/old_utils/: avg_functions.py
cvdp/plotting/: README.md  plotting_functions.py
cvdp/scripts/: atm.mean_stddev.gr.py  atm_mean_stddev_gr.py  atm_ocn.mean_stddev.calc.py  atm_ocn_mean_stddev_calc.py  functions.py  namelist.py
cvdp/test-data/validation/: ERSSTv5.cvdp_data.1979-2024.nc  GISTEMPv4.cvdp_data.1979-2024.nc  GPCP.cvdp_data.1979-2024.nc
cvdp/utils/: __init__.py  analysis.py  file_creation.py  utils.py
cvdp/vis/: AtmOcnGR.py  __init__.py  colormaps.py  plots.py  winkel_tripel.py
cvdp/visualization/: colormaps.py  notebook_build.py  plots.py  seasonal_plots.py  vis_utils.py
lib/: README.md  config.py  cvdp_info.py
scripts/: atm.mean_stddev.gr.py  ensemble_mean.calc.py  functions.py  namelist.py  runTasks.py
scripts/Testing/: Notes.py  atm.mean_stddev.calc.ipynb  atm.trends_timeseries.calc.ipynb  ensemble_mean.calc.ipynb  psl.mean_stddev.old.ipynb  testing.ipynb  testing2.ipynb
